Cover background average color added.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -24,7 +24,7 @@ h2.tight {margin-top: 0;}
 .container {max-width: 48rem; position: relative;}
 section {padding: 5rem 0;}
 
-#cover {background: url(nadr_v_centru-vizualizace.jpg) no-repeat center; background-size: cover;}
+#cover {background: #8c8b82 url(nadr_v_centru-vizualizace.jpg) no-repeat center; background-size: cover;}
 #cover .container {min-height: 20rem;}
 #cover h1 {position: absolute; bottom: 0; left: 0; right: 0; padding: 0 15px 0;}
 
