--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,22 +1,19 @@
 
 $blue: #00AEEF;
-$blue-transparent: rgba($blue, 0.9);
 
 $green: #51F16F;
 $grey: #eee;
 $white: #fff;
 $black: #000;
 
-$border-color: rgba(255,255,255,0.3);
-
-
 body {background-color: $grey;}
 
 strong {font-weight: 600;}
 
 h1, h2 {color: $white; font-weight: 600; font-size: 2rem; line-height: 135%;}
-h1 {text-shadow: 0 0.2rem 2rem $black, 0 0.2rem 2rem $black; margin-top: 4rem;}
-h1 .lead {font-size: inherit; font-weight: inherit; text-transform: uppercase; display: block;}
+h1 {text-shadow: 0 0.2rem 2rem $black, 0 0.2rem 2rem $black; margin-top: 4rem; text-align: center; line-height: 135%;}
+h1 .lead {font-weight: inherit; text-transform: uppercase; display: block; font-size: 4rem; line-height: 120%;}
+h1 .subtitle {font-size: 3rem; text-transform: none; margin-bottom: 3rem; line-height: 120%;}
 h2, p.lead {font-size: 1.35rem; line-height: 135%; color: $black;}
 h2 {margin: 3rem 0 1.5rem; color: $blue; font-size: 1.5rem; font-weight: 700;}
 h2.tight {margin-top: 0;}
@@ -34,3 +31,7 @@ footer {padding: 3rem 0 6rem; background: $white;}
 #nadrvcentru {background: url(nadr_v_centru-logo.png) no-repeat center; background-size: contain; min-height: 20rem; display: block; position: relative; color: $blue;}
 #nadrvcentru:hover, #nadrvcentru:focus {color: darken($blue, 10);}
 #nadrvcentru span {position: absolute; bottom: 0; left: 0; right: 0; text-align: center;}
+
+ol {padding-left: 2rem;}
+ol li.lead {font-size: 1.5rem; color: $blue; padding-left: 0.5rem;}
+ol li.lead p.lead {font-size: 1.35rem; color: $black; padding-left: 2rem;}
