--- a/assets/style.scss
+++ b/assets/style.scss
@@ -28,7 +28,7 @@ section {padding: 5rem 0;}
 #cover .container {min-height: 20rem;}
 #cover h1 {position: absolute; bottom: 0; left: 0; right: 0; padding: 0 15px 0;}
 
-#content {background: $grey;}
+// #content {background: $grey;}
 
 footer {padding: 3rem 0 6rem; background: $white;}
 #nadrvcentru {background: url(nadr_v_centru-logo.png) no-repeat center; background-size: contain; min-height: 20rem; display: block; position: relative; color: $blue;}
